--- a/data-architect.html
+++ b/data-architect.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
       Database Architect H/F - CDI (Corse) - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58d1e2cf1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58d1e2cf1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -173,7 +173,7 @@ dig?...</p>
 <p><span class="badge badge-light">London London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -225,7 +225,7 @@ dig?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -380,7 +380,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -434,7 +434,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ignitisgroup/743999697255174-data-solutions-architect'>Ignitis group DATA SOLUTIONS ARCHITECT | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ignitisgroup/743999697255174-data-solutions-architect'>Ignitis group DATA SOLUTIONS ARCHITECT | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -458,11 +458,11 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiger-analytics.workable.com/j/41EF005092'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
+<h5><a href='https://tiger-analytics.workable.com/j/41EF005092'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
